# nansen

./: README.md  client.py  config.json  main.py  pyproject.toml  requirements.txt  start.py
bot/: _logger.py  anticaptcha.py  author.py  config.py  http_client.py  imap_client.py  input.py  logger.py  output.py  paths.py  process.py  scripts.py  utils.py
bot/nansen/: __init__.py  anticaptcha.py  api.py  other.py
config/default/: config.toml  services.toml
logger/: logger.py
utils/: captcha_solver.py  get_config_data.py
