[tool.poetry]
name = "nansen"
version = "0.2.0"
description = ""
authors = ["Alen <alen.kimov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.1"
loguru = "^0.7.0"
aiohttp = "^3.8.0"
python3-aioanticaptcha = "^1.2"
pydantic = "^2.1.1"
pyuseragents = "^1.0.5"
better-web3 = "^2.0.0"
questionary = "^2.0.0"
aioimaplib = "^1.0.1"
aiohttp-socks = "^0.8.0"
python-socks = {extras = ["asyncio"], version = "^2.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
